      E.g. where in the past 'IBoolean.SetValue("Hello")' was OK, it is now
      required to use code like this 'IBoolean.SetValue(bool("Hello"))'.
    - Fixed a memory leak: Info objects returned by EnumerateDevices and
      EnumerateTls were not released.
    - Added support for accessing ITransportLayer (especially GigETransportLayer).

Version 1.4.0
    - Date 2019-03-13
    - Fixed a regression introduced in version 1.1.0 where pypylon stopped being
      importable when used in an application built with PyInstaller.
    - Fixed PylonImageBase so that the methods CanSaveWithoutConversion, Save
      and Load can be used. Added a sample that shows how images can be saved.
    - Added macOS platform support
    - Switched to Pylon 5.2.0 for windows and linux builds

Version 1.3.1
    - Date 2018-08-13
    - Bump version number to fix pypi deployment

Version 1.3.0
    - Date 2018-08-09
    - The pylon version is no longer contained in the local version tag of pypylon
      when building with the reference pylon version (currently 5.0.12)
    - Better package metadata
    - Windows wheels are pushed to pypi
    - Linux release builds for python 2.7

Version 1.2.0
    - Date 2018-07-06
    - Remove the pylon build number from the python package name
    - Fixed a bug in GrabResult.GetArrayZeroCopy (accessing a non-existent
      attribute). Added a zero-copy sample.
    - fix image format converter
    - enable enum_props in Pylon
    - fix SWIG include path in --pp-debug case
    - Fixed TlFactory.EnumerateDevices so that arbitrary objects are no longer
      accepted as boolean arguments - they have to be 'real' bool() objects.
      This was done to easily spot this unwitting omission:
        # programmer wrote:
        found1 = pylon.TlFactory.GetInstance().EnumerateDevices(single_di)
        # but meant to say:
        found2 = pylon.TlFactory.GetInstance().EnumerateDevices([single_di])